Added routes for ratings data in index view

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1-2",
+  "version": "0.0.1-3",
   "private": true,
   "scripts": {
     "start": "app.js"
@@ -8,7 +8,8 @@
     "express": "3.0.0rc4",
     "ejs": "*",
     "mongoose": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "request": "2.11.x"
   },
   "subdomain": "ryanorban.topcop-express",
   "engines": {
